Make subprojects depend on bouncycastle
Signed-off-by: Victoria Henry <vhenry@pivotal.io>

--- a/download-bouncy-castle-fips.gradle
+++ b/download-bouncy-castle-fips.gradle
@@ -41,4 +41,7 @@ task downloadBouncyCastleFips(type: Exec) {
     }
 }
 
-tasks.matching {it != downloadBouncyCastleFips}.all {it.dependsOn downloadBouncyCastleFips}
+
+subprojects {
+    tasks.matching {it != downloadBouncyCastleFips}.all {it.dependsOn downloadBouncyCastleFips}
+}
