Implement TLS on KMS gRPC communication layer
[166792592]

We now encrypt the traffic over the socket between the gRPC client and
server. This requires configuring the `kms-provider` plugin with the CA
used to sign the certificate being used on the kms server side, as well
as the hostname the certificate is signed for.

Signed-off-by: David Lohle <Proplex@users.noreply.github.com>

--- a/.gitignore
+++ b/.gitignore
@@ -178,5 +178,5 @@ gradle-app.setting
 *.jks
 
 applications/credhub-api/src/main/resources/version
-applications/credhub-api/src/main/resources/application-dev-external-provider.yml
+application-*-generated.yml
 libs/
