Enable concatenate_cas by default in dev
Signed-off-by: Victoria Henry <vhenry@pivotal.io>

--- a/applications/credhub-api/src/main/resources/application-dev.yml
+++ b/applications/credhub-api/src/main/resources/application-dev.yml
@@ -56,7 +56,7 @@ spring:
       ddl-auto: validate
 
 certificates:
-  concatenate_cas: false
+  concatenate_cas: true
 
 backend:
   socket_file: "/tmp/socket/test.sock"
