--- a/components/credentials/build.gradle
+++ b/components/credentials/build.gradle
@@ -1,4 +1,7 @@
 buildscript {
+    ext {
+        grpcVersion = '1.14.0'
+    }
     repositories {
         mavenCentral()
         maven { url("https://repo.spring.io/plugins-release") }
@@ -34,6 +37,7 @@ dependencies {
     implementation project(":components:errors")
     implementation project(":components:string-utilities")
     implementation project(":components:time-support")
+    implementation project(":backends:remote")
 
     testImplementation project(path: ":components:test-support", configuration: "testOutput")
 
@@ -51,6 +55,9 @@ dependencies {
     implementation("org.postgresql:postgresql:${postgresqlJdbcVersion}")
     implementation("org.mariadb.jdbc:mariadb-java-client")
     implementation("com.h2database:h2")
+
+    // proto
+    implementation "io.grpc:grpc-services:${grpcVersion}"
 
     // Other
     implementation("org.passay:passay:${passayVersion}")
