check version file in to credhub src
[#167461232]

Co-authored-by: Josh Zarrabi <jzarrabi@pivotal.io>

--- a/.gitignore
+++ b/.gitignore
@@ -177,6 +177,6 @@ gradle-app.setting
 # Ignore any key stores
 *.jks
 
-applications/credhub-api/src/main/resources/version
+applications/credhub-api/src/main/resources/application-dev-external-provider.yml
 application-*-generated.yml
 libs/
