Changed CertificateCredentialVersion generated field to certificate_generate
MySQL update has generated as a keyword, thus we needed to rename
Also migrated jdbc driver to mysql (instead of mariadb)

[finishes #169326864]

Co-authored-by: Elenore Bastian <ebastian@pivotal.io>

--- a/applications/credhub-api/src/main/resources/application-dev-mysql.yml
+++ b/applications/credhub-api/src/main/resources/application-dev-mysql.yml
@@ -2,7 +2,7 @@ spring:
   datasource:
     username: root
     password:
-    url: jdbc:mariadb://localhost:3306/credhub_dev
+    url: jdbc:mysql://localhost:3306/credhub_dev?serverTimezone=UTC
   profiles:
     include: dev
   flyway:
