--- a/components/credentials/build.gradle
+++ b/components/credentials/build.gradle
@@ -49,7 +49,8 @@ dependencies {
     // DB
     implementation("org.flywaydb:flyway-core")
     implementation("org.postgresql:postgresql:${postgresqlJdbcVersion}")
-    implementation("org.mariadb.jdbc:mariadb-java-client")
+
+    implementation("mysql:mysql-connector-java:${mysqlJdbcVersion}")
     implementation("com.h2database:h2")
 
     // Other
