--- a/applications/credhub-api/build.gradle
+++ b/applications/credhub-api/build.gradle
@@ -59,7 +59,8 @@ dependencies {
 
     // DB
     implementation("org.postgresql:postgresql:${postgresqlJdbcVersion}")
-    implementation("org.mariadb.jdbc:mariadb-java-client")
+
+    implementation("mysql:mysql-connector-java:${mysqlJdbcVersion}")
     implementation("org.flywaydb:flyway-core")
     implementation("com.h2database:h2")
 
