--- a/applications/credhub-api/src/test/resources/application-unit-test-mysql.yml
+++ b/applications/credhub-api/src/test/resources/application-unit-test-mysql.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
     username: root
-    url: jdbc:mariadb://localhost:3306/credhub_test
+    url: jdbc:mysql://localhost:3306/credhub_test?serverTimezone=UTC
   flyway:
     locations: classpath:/db/migration/common,classpath:/db/migration/mysql
