--- a/backends/credhub/build.gradle
+++ b/backends/credhub/build.gradle
@@ -61,8 +61,9 @@ dependencies {
 
     // DB
     implementation("org.postgresql:postgresql:${postgresqlJdbcVersion}")
-    implementation("org.mariadb.jdbc:mariadb-java-client")
+
     implementation("org.flywaydb:flyway-core")
+    implementation("mysql:mysql-connector-java:${mysqlJdbcVersion}")
     implementation("com.h2database:h2")
 
     // Other
