--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,7 @@ buildscript {
         guavaVersion = '23.6-jre'
         jsonPathVersion = '2.4.0'
         kotlinVersion = '1.2.71'
+        mysqlJdbcVersion = '8.0.18'
         passayVersion = '1.3.0'
         postgresqlJdbcVersion = '42.2.5'
         spotBugsToolVersion = '3.1.9'
