--- a/components/encryption/build.gradle
+++ b/components/encryption/build.gradle
@@ -52,7 +52,8 @@ dependencies {
     // DB
     testImplementation("org.flywaydb:flyway-core")
     implementation("org.postgresql:postgresql:${postgresqlJdbcVersion}")
-    implementation("org.mariadb.jdbc:mariadb-java-client")
+
+    implementation("mysql:mysql-connector-java:${mysqlJdbcVersion}")
     implementation("com.h2database:h2")
 
     // Other
