--- a/components/permissions/build.gradle
+++ b/components/permissions/build.gradle
@@ -47,8 +47,10 @@ dependencies {
     // DB
     implementation("org.flywaydb:flyway-core")
     implementation("org.postgresql:postgresql:${postgresqlJdbcVersion}")
-    implementation("org.mariadb.jdbc:mariadb-java-client")
+
     implementation("com.h2database:h2")
+    implementation("mysql:mysql-connector-java:${mysqlJdbcVersion}")
+
 
     // Other
     implementation("com.google.guava:guava:${guavaVersion}")
