revert to using mariadb jdbc driver to maintain mariadb compatibility
- this driver works with mysql 5.7 but we should probably change to
using mysql driver in our next major release

--- a/backends/credhub/build.gradle
+++ b/backends/credhub/build.gradle
@@ -63,7 +63,7 @@ dependencies {
     implementation("org.postgresql:postgresql:${postgresqlJdbcVersion}")
 
     implementation("org.flywaydb:flyway-core")
-    implementation("mysql:mysql-connector-java:${mysqlJdbcVersion}")
+    implementation("org.mariadb.jdbc:mariadb-java-client:${mariadbJdbcVersion}")
     implementation("com.h2database:h2")
 
     // Other
