--- a/components/encryption/build.gradle
+++ b/components/encryption/build.gradle
@@ -53,7 +53,7 @@ dependencies {
     testImplementation("org.flywaydb:flyway-core")
     implementation("org.postgresql:postgresql:${postgresqlJdbcVersion}")
 
-    implementation("mysql:mysql-connector-java:${mysqlJdbcVersion}")
+    implementation("org.mariadb.jdbc:mariadb-java-client:${mariadbJdbcVersion}")
     implementation("com.h2database:h2")
 
     // Other
