--- a/applications/credhub-api/build.gradle
+++ b/applications/credhub-api/build.gradle
@@ -60,7 +60,7 @@ dependencies {
     // DB
     implementation("org.postgresql:postgresql:${postgresqlJdbcVersion}")
 
-    implementation("mysql:mysql-connector-java:${mysqlJdbcVersion}")
+    implementation("org.mariadb.jdbc:mariadb-java-client:${mariadbJdbcVersion}")
     implementation("org.flywaydb:flyway-core")
     implementation("com.h2database:h2")
 
