--- a/applications/credhub-api/src/main/resources/application-dev-mysql.yml
+++ b/applications/credhub-api/src/main/resources/application-dev-mysql.yml
@@ -2,7 +2,7 @@ spring:
   datasource:
     username: root
     password:
-    url: jdbc:mysql://localhost:3306/credhub_dev?serverTimezone=UTC
+    url: jdbc:mariadb://localhost:3306/credhub_dev
   profiles:
     include: dev
   flyway:
