revert to using mariadb jdbc driver to maintain mariadb compatibility
- this driver works with mysql 5.7 but we should probably change to
using mysql driver in our next major release
- fix linting errors

--- a/components/credentials/build.gradle
+++ b/components/credentials/build.gradle
@@ -54,7 +54,7 @@ dependencies {
     implementation("org.flywaydb:flyway-core")
     implementation("org.postgresql:postgresql:${postgresqlJdbcVersion}")
 
-    implementation("mysql:mysql-connector-java:${mysqlJdbcVersion}")
+    implementation("org.mariadb.jdbc:mariadb-java-client:${mariadbJdbcVersion}")
     implementation("com.h2database:h2")
 
     // proto
