--- a/.gitignore
+++ b/.gitignore
@@ -174,6 +174,10 @@ gradle-app.setting
 !applications/credhub-api/src/test/resources/ca/dev_uaa.pem
 *.srl
 
+#ignore certificate configuration files
+applications/credhub-api/src/test/resources/client.cnf
+applications/credhub-api/src/test/resources/server.cnf
+
 # Ignore any key stores
 *.jks
 
