--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,8 +28,8 @@ services:
     ports:
     - 9000:9000
     environment:
-      CREDHUB_AUTH_SERVER_EXTERNAL_URL: http://localhost:8080/uaa
-      CREDHUB_AUTH_SERVER_INTERNAL_URL: http://uaa:8080/uaa
+      CREDHUB_AUTH_SERVER_EXTERNAL_URL: http://localhost:8080/uaa/
+      CREDHUB_AUTH_SERVER_INTERNAL_URL: http://uaa:8080/uaa/
       #https://35.196.32.64:8443
       TRUST_STORE_PASSWORD: changeit
       LOG_LEVEL: debug
