Updated flyway, kotlin, and springboot to regain compatatbility with MariaDB 10.3 and 10.2
Credhub is no loger compatable with mariadb 10.1.
Flyway does not support mariadb 10.1 in its community release.

[finshes #169730844]

--- a/applications/credhub-api/build.gradle
+++ b/applications/credhub-api/build.gradle
@@ -61,8 +61,8 @@ dependencies {
     implementation("org.postgresql:postgresql:${postgresqlJdbcVersion}")
 
     implementation("org.mariadb.jdbc:mariadb-java-client:${mariadbJdbcVersion}")
-    implementation("org.flywaydb:flyway-core")
-    implementation("com.h2database:h2")
+    implementation("org.flywaydb:flyway-core:${flywayVersion}")
+    implementation("com.h2database:h2:${h2Version}")
 
     compile files("${rootDir.toPath()}/libs/bcpkix-fips-${bcpkixFipsVersion}.jar")
     compile files("${rootDir.toPath()}/libs/bc-fips-${bcFipsVersion}.jar")
