--- a/build.gradle
+++ b/build.gradle
@@ -8,15 +8,17 @@ buildscript {
         asciiDoctorPluginVersion = '1.5.3'
         bcpkixFipsVersion = '1.0.2'
         bcFipsVersion = '1.0.1'
+        flywayVersion = '6.0.8'
         guavaVersion = '23.6-jre'
+        h2Version = '1.4.199'
         jsonPathVersion = '2.4.0'
-        kotlinVersion = '1.2.71'
+        kotlinVersion = '1.3.50'
         mariadbJdbcVersion = '2.4.4'
         passayVersion = '1.3.0'
         postgresqlJdbcVersion = '42.2.5'
         spotBugsToolVersion = '3.1.9'
         spotBugsGradlePluginVersion = '1.6.9'
-        springBootVersion = '2.1.3.RELEASE'
+        springBootVersion = '2.2.1.RELEASE'
         springRestDocsVersion = '2.0.3.RELEASE'
         springSecurityOauth2Version = '2.3.6.RELEASE'
         springSecurityOauth2AutoconfigureVersion = '2.0.5.RELEASE'
