--- a/components/credentials/build.gradle
+++ b/components/credentials/build.gradle
@@ -51,11 +51,11 @@ dependencies {
     implementation("org.jetbrains.kotlin:kotlin-reflect")
 
     // DB
-    implementation("org.flywaydb:flyway-core")
+    implementation("org.flywaydb:flyway-core:${flywayVersion}")
     implementation("org.postgresql:postgresql:${postgresqlJdbcVersion}")
 
     implementation("org.mariadb.jdbc:mariadb-java-client:${mariadbJdbcVersion}")
-    implementation("com.h2database:h2")
+    implementation("com.h2database:h2:${h2Version}")
 
     // proto
     implementation "io.grpc:grpc-services:${grpcVersion}"
