--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,7 @@ buildscript {
         h2Version = '1.4.199'
         jsonPathVersion = '2.4.0'
         kotlinVersion = '1.3.50'
+        ktlintVersion = '0.35.0'
         mariadbJdbcVersion = '2.4.4'
         passayVersion = '1.3.0'
         postgresqlJdbcVersion = '42.2.5'
