CredHub can be deployed to a GCP Kubernetes cluster
[#170832694]

Co-authored-by: Tom Kennedy <tkennedy@pivotal.io>
Co-authored-by: Zayd Zori <zzori@pivotal.io>
Co-authored-by: Mia Fryling <mfryling@pivotal.io>

--- a/.gitignore
+++ b/.gitignore
@@ -172,6 +172,7 @@ gradle-app.setting
 *.p12
 *.pem
 !applications/credhub-api/src/test/resources/ca/dev_uaa.pem
+!docker/dev_uaa.pem
 *.srl
 
 #ignore certificate configuration files
