--- a/docker/config/application.yml
+++ b/docker/config/application.yml
@@ -1,5 +1,5 @@
 auth-server:
-  url: https://35.196.32.64:8443
+  url: ${UAA_URL}
   trust_store: /app/stores/trust_store.jks
   trust_store_password: ${TRUST_STORE_PASSWORD}
 
