Use RFC3339 and GMT for dev/local logs
[#171818575]

Signed-off-by: Tyler Phelan <tphelan@pivotal.io>

--- a/applications/credhub-api/src/main/resources/log4j2.properties
+++ b/applications/credhub-api/src/main/resources/log4j2.properties
@@ -4,7 +4,6 @@ appender.console.name=STDOUT
 appender.console.type=Console
 appender.console.target=SYSTEM_OUT
 appender.console.layout.type = PatternLayout
-appender.console.layout.pattern=%d{HH:mm:ss.SSS} [%t] %-5level %logger{36} - %msg%n
+appender.console.layout.pattern=%d{yyyy-MM-dd'T'HH:mm:ss.SSS}{GMT+0}Z [%t] %-5level %logger{36} - %msg%n
 
 rootLogger.appenderRef.stdout.ref = STDOUT
-
