Set mysql as DATABASE_PROFILE for github actions [#169688682]

--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -26,6 +26,7 @@ jobs:
       - name: Run unit tests
         run: |
           export TERM=xterm
+          export DATABASE_PROFILE=mysql
 
           if [[ $DATABASE_PROFILE == *"mysql" ]]; then
             service mysql start
