--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -13,7 +13,7 @@ jobs:
   # This workflow contains a single job called "build"
   run-unit-tests:
     # The type of runner that the job will run on
-    runs-on: macos-latest
+    runs-on: ubuntu-latest
     container:
       image: pcfseceng/credhub-ci
 
