Pin version of commons-codec to 1.14 - overwrite the version provided by spring-security-oauth2 - this pinning can be removed once we deprecate spring-security-oauth2 - fixes CVEs [CODEC-134, CODEC-270]
[#172249272]
Signed-off-by: Zayd Zori <zzori@pivotal.io>

--- a/backends/credhub/build.gradle
+++ b/backends/credhub/build.gradle
@@ -76,6 +76,7 @@ dependencies {
 
     implementation("com.google.guava:guava:${guavaVersion}")
     implementation("org.apache.commons:commons-lang3:${apacheCommonsLang3Version}")
+    implementation("commons-codec:commons-codec:${commonsCodecVersion}")
     implementation("com.jayway.jsonpath:json-path:${jsonPathVersion}")
 
     testImplementation("org.springframework.restdocs:spring-restdocs-mockmvc:$springRestDocsVersion")
