--- a/components/errors/build.gradle
+++ b/components/errors/build.gradle
@@ -37,6 +37,7 @@ dependencies {
 
     implementation("com.jayway.jsonpath:json-path:${jsonPathVersion}")
     implementation("com.google.guava:guava:${guavaVersion}")
+    implementation("commons-codec:commons-codec:${commonsCodecVersion}")
 }
 
 dependencyManagement {
