--- a/components/permissions/build.gradle
+++ b/components/permissions/build.gradle
@@ -56,6 +56,7 @@ dependencies {
     implementation("com.google.guava:guava:${guavaVersion}")
     implementation("org.apache.commons:commons-lang3:${apacheCommonsLang3Version}")
     implementation("org.apache.commons:commons-io:${apacheCommonsIoVersion}")
+    implementation("commons-codec:commons-codec:${commonsCodecVersion}")
 }
 
 dependencyManagement {
