--- a/components/string-utilities/build.gradle
+++ b/components/string-utilities/build.gradle
@@ -38,6 +38,7 @@ dependencies {
     implementation("org.jetbrains.kotlin:kotlin-reflect")
 
     implementation("com.google.guava:guava:${guavaVersion}")
+    implementation("commons-codec:commons-codec:${commonsCodecVersion}")
 }
 
 dependencyManagement {
