--- a/components/test-support/build.gradle
+++ b/components/test-support/build.gradle
@@ -43,6 +43,7 @@ dependencies {
     compile files("${rootDir.toPath()}/libs/bc-fips-${bcFipsVersion}.jar")
 
     implementation("org.apache.commons:commons-lang3:${apacheCommonsLang3Version}")
+    implementation("commons-codec:commons-codec:${commonsCodecVersion}")
 }
 
 dependencyManagement {
