--- a/backends/remote/build.gradle
+++ b/backends/remote/build.gradle
@@ -52,6 +52,7 @@ dependencies {
 
     // Other
     implementation("org.apache.commons:commons-lang3:${apacheCommonsLang3Version}")
+    implementation("commons-codec:commons-codec:${commonsCodecVersion}")
 
     //gRPC
     implementation "com.google.api.grpc:proto-google-common-protos:1.17.0"
