--- a/backends/shared-backend-configuration/build.gradle
+++ b/backends/shared-backend-configuration/build.gradle
@@ -52,6 +52,7 @@ dependencies {
 
     // Other
     implementation("org.apache.httpcomponents:httpclient:${apacheHttpClientVersion}")
+    implementation("commons-codec:commons-codec:${commonsCodecVersion}")
 }
 
 dependencyManagement {
