--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,7 @@ buildscript {
         asciiDoctorPluginVersion = '1.6.1'
         bcpkixFipsVersion = '1.0.2'
         bcFipsVersion = '1.0.1'
+        commonsCodecVersion = '1.14' // remove this after deleting (now deprecated) spring-security-oauth2
         flywayVersion = '5.2.4'
         guavaVersion = '29.0-jre'
         h2Version = '1.4.199'
