--- a/components/auth/build.gradle
+++ b/components/auth/build.gradle
@@ -57,6 +57,7 @@ dependencies {
     compile files("${rootDir.toPath()}/libs/bc-fips-${bcFipsVersion}.jar")
     implementation("com.google.guava:guava:${guavaVersion}")
     implementation("org.apache.commons:commons-lang3:${apacheCommonsLang3Version}")
+    implementation("commons-codec:commons-codec:${commonsCodecVersion}")
 }
 
 dependencyManagement {
