--- a/components/credentials/build.gradle
+++ b/components/credentials/build.gradle
@@ -67,6 +67,7 @@ dependencies {
     implementation("com.google.guava:guava:${guavaVersion}")
     implementation("org.apache.commons:commons-lang3:${apacheCommonsLang3Version}")
     implementation("org.apache.httpcomponents:httpclient:${apacheHttpClientVersion}")
+    implementation("commons-codec:commons-codec:${commonsCodecVersion}")
 }
 
 dependencyManagement {
