--- a/components/http-support/build.gradle
+++ b/components/http-support/build.gradle
@@ -37,6 +37,7 @@ dependencies {
 
     implementation("com.jayway.jsonpath:json-path:${jsonPathVersion}")
     implementation("org.apache.httpcomponents:httpclient:${apacheHttpClientVersion}")
+    implementation("commons-codec:commons-codec:${commonsCodecVersion}")
 }
 
 dependencyManagement {
