Revert "Use api instead of implementation for bouncy castle"
This reverts commit 0793376a899ec04d018b69c53554a8c937846bc6.

--- a/components/test-support/build.gradle
+++ b/components/test-support/build.gradle
@@ -39,8 +39,8 @@ dependencies {
     implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk8")
     implementation("org.jetbrains.kotlin:kotlin-reflect")
 
-    api("org.bouncycastle:bc-fips:${bcFipsVersion}")
-    api("org.bouncycastle:bcpkix-fips:${bcpkixFipsVersion}")
+    implementation("org.bouncycastle:bc-fips:${bcFipsVersion}")
+    implementation("org.bouncycastle:bcpkix-fips:${bcpkixFipsVersion}")
 
     implementation("org.apache.commons:commons-lang3:${apacheCommonsLang3Version}")
     implementation("commons-codec:commons-codec:${commonsCodecVersion}")
