--- a/components/credentials/build.gradle
+++ b/components/credentials/build.gradle
@@ -62,8 +62,8 @@ dependencies {
 
     // Other
     implementation("org.passay:passay:${passayVersion}")
-    api("org.bouncycastle:bc-fips:${bcFipsVersion}")
-    api("org.bouncycastle:bcpkix-fips:${bcpkixFipsVersion}")
+    implementation("org.bouncycastle:bc-fips:${bcFipsVersion}")
+    implementation("org.bouncycastle:bcpkix-fips:${bcpkixFipsVersion}")
     implementation("com.google.guava:guava:${guavaVersion}")
     implementation("org.apache.commons:commons-lang3:${apacheCommonsLang3Version}")
     implementation("org.apache.httpcomponents:httpclient:${apacheHttpClientVersion}")
