Revert "Upgrade bouncy-castle-fips"
- Just trying it to see if it fixes the pipeline

This reverts commit a0161b9657bbc5b61a1eb05553f4da9c6607a339.

--- a/applications/credhub-api/build.gradle
+++ b/applications/credhub-api/build.gradle
@@ -64,8 +64,8 @@ dependencies {
     implementation("org.flywaydb:flyway-core:${flywayVersion}")
     implementation("com.h2database:h2:${h2Version}")
 
-    implementation("org.bouncycastle:bc-fips:${bcFipsVersion}")
-    implementation("org.bouncycastle:bcpkix-fips:${bcpkixFipsVersion}")
+    compile files("${rootDir.toPath()}/libs/bcpkix-fips-${bcpkixFipsVersion}.jar")
+    compile files("${rootDir.toPath()}/libs/bc-fips-${bcFipsVersion}.jar")
 
     implementation("com.google.guava:guava:${guavaVersion}")
     implementation("org.apache.commons:commons-lang3:${apacheCommonsLang3Version}")
