--- a/components/encryption/build.gradle
+++ b/components/encryption/build.gradle
@@ -58,8 +58,8 @@ dependencies {
 
     // Other
     implementation("org.passay:passay:${passayVersion}")
-    implementation("org.bouncycastle:bc-fips:${bcFipsVersion}")
-    implementation("org.bouncycastle:bcpkix-fips:${bcpkixFipsVersion}")
+    compile files("${rootDir.toPath()}/libs/bcpkix-fips-${bcpkixFipsVersion}.jar")
+    compile files("${rootDir.toPath()}/libs/bc-fips-${bcFipsVersion}.jar")
 
     implementation("org.apache.commons:commons-lang3:${apacheCommonsLang3Version}")
     implementation("commons-codec:commons-codec:${commonsCodecVersion}")
