--- a/backends/credhub/build.gradle
+++ b/backends/credhub/build.gradle
@@ -67,8 +67,8 @@ dependencies {
     implementation("com.h2database:h2:${h2Version}")
 
     // Other
-    compile files("${rootDir.toPath()}/libs/bcpkix-fips-${bcpkixFipsVersion}.jar")
-    compile files("${rootDir.toPath()}/libs/bc-fips-${bcFipsVersion}.jar")
+    api("org.bouncycastle:bc-fips:${bcFipsVersion}")
+    api("org.bouncycastle:bcpkix-fips:${bcpkixFipsVersion}")
 
     // proto
     implementation "com.google.api.grpc:proto-google-common-protos:1.17.0"
