--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,8 @@ buildscript {
         classpath("org.jetbrains.kotlin:kotlin-gradle-plugin:${kotlinVersion}")
         classpath("org.jetbrains.kotlin:kotlin-allopen:${kotlinVersion}")
         classpath("org.owasp:dependency-check-gradle:5.3.2.1")
+        classpath("org.bouncycastle:bc-fips:${bcFipsVersion}")
+        classpath("org.bouncycastle:bcpkix-fips:${bcpkixFipsVersion}")
     }
 }
 
@@ -43,7 +45,6 @@ plugins {
 
 apply plugin: DependenciesGraphPlugin
 apply plugin: "org.owasp.dependencycheck"
-apply from: "download-bouncy-castle-fips.gradle"
 
 dependencyUpdates.resolutionStrategy = {
     componentSelection { rules ->
