Directly import dependencies org.hibernate.validator:hibernate-validator and jakarta.validation:jakarta.validation-api - as they are no longer supplied by Spring boot 2.3+
[#172858632]

--- a/backends/credhub/build.gradle
+++ b/backends/credhub/build.gradle
@@ -81,6 +81,8 @@ dependencies {
 
     testImplementation("org.springframework.restdocs:spring-restdocs-mockmvc:$springRestDocsVersion")
     asciidoctor("org.springframework.restdocs:spring-restdocs-asciidoctor:$springRestDocsVersion")
+
+    implementation("jakarta.validation:jakarta.validation-api:2.0.2")
 }
 
 dependencyManagement {
