--- a/components/credentials/build.gradle
+++ b/components/credentials/build.gradle
@@ -68,6 +68,8 @@ dependencies {
     implementation("org.apache.commons:commons-lang3:${apacheCommonsLang3Version}")
     implementation("org.apache.httpcomponents:httpclient:${apacheHttpClientVersion}")
     implementation("commons-codec:commons-codec:${commonsCodecVersion}")
+    implementation("jakarta.validation:jakarta.validation-api:2.0.2")
+    implementation("org.hibernate.validator:hibernate-validator:6.0.19.Final")
 }
 
 dependencyManagement {
