--- a/components/test-support/build.gradle
+++ b/components/test-support/build.gradle
@@ -44,6 +44,8 @@ dependencies {
 
     implementation("org.apache.commons:commons-lang3:${apacheCommonsLang3Version}")
     implementation("commons-codec:commons-codec:${commonsCodecVersion}")
+
+    implementation("jakarta.validation:jakarta.validation-api:2.0.2")
 }
 
 dependencyManagement {
