--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,7 @@ buildscript {
     }
     repositories {
         mavenCentral()
+        jcenter()
         maven { url("https://repo.spring.io/plugins-release") }
         maven { url("https://plugins.gradle.org/m2/") }
     }
