--- a/build.gradle
+++ b/build.gradle
@@ -20,8 +20,8 @@ buildscript {
         postgresqlJdbcVersion = '42.2.14'
         spotBugsToolVersion = '3.1.9'
         spotBugsGradlePluginVersion = '1.6.9'
-        springBootVersion = '2.5.3'
         springRestDocsVersion = '2.0.5.RELEASE'
+        springBootVersion = '2.2.7.RELEASE'
         springSecurityOauth2Version = '2.5.0.RELEASE'
         springSecurityOauth2AutoconfigureVersion = '2.3.1.RELEASE'
     }
