Rename *minimumDuration fields, make 0 the default
Authored-by: Brian Upton <bupton@vmware.com>
Authored-by: Preethi Varambally <pvarambally@pivotal.io>

--- a/applications/credhub-api/src/test/resources/application-minimum-duration.yml
+++ b/applications/credhub-api/src/test/resources/application-minimum-duration.yml
@@ -1,3 +1,4 @@
 certificates:
-  ca_minimum_duration: 1825
-  leaf_minimum_duration: 1460
+  ca_minimum_duration_in_days: 1825
+  leaf_minimum_duration_in_days: 1460
+
