--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,6 +5,7 @@ updates:
     schedule:
       interval: "daily"
     open-pull-requests-limit: 100
+    target-branch: "2.9.x"
 
   - package-ecosystem: "gradle"
     directory: "/"
