Upgrade some dependencies so they can be compatilbe with flyway 7.x
- Upgraded Spring Boot to 2.4.11, Kotlin to 1.4.32 and ktlint to 0.42.1.
- Fixed ktlint failures.
- Fixed spotbugs-detected jdcd-resource not being closed issues and excluded false postives.
- The project now can be built. Have not tried to run all tests yet.

[#177604067]

--- a/components/auth/build.gradle
+++ b/components/auth/build.gradle
@@ -40,6 +40,7 @@ dependencies {
     implementation("org.springframework.security.oauth:spring-security-oauth2:${springSecurityOauth2Version}")
     testImplementation("org.springframework.security:spring-security-test")
     testImplementation("org.springframework.boot:spring-boot-starter-test")
+    testImplementation('junit:junit:4.13')
 
     implementation('com.fasterxml.jackson.module:jackson-module-kotlin')
     implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk8")
