--- a/applications/credhub-api/build.gradle
+++ b/applications/credhub-api/build.gradle
@@ -78,6 +78,7 @@ dependencies {
     testImplementation("org.springframework.security:spring-security-test")
     testImplementation("org.springframework.boot:spring-boot-starter-test")
     testImplementation('org.springframework.cloud:spring-cloud-starter-contract-verifier')
+    testImplementation('junit:junit:4.13')
 }
 
 configurations.all {
