fix: profile schema
- see: https://github.com/spring-projects/spring-boot/wiki/Spring-Boot-Config-Data-Migration-Guide#profile-activation
- without this change, `./scripts/start_server.sh -Dspring.profiles.active=dev,dev-postgres` would fail due to the above change
- Since in the README we tell people to run `./scripts/start_server.sh
  -Dspring.profiles.active=dev,dev-mysql`, there is no need to include
  the dev profile in dev-mysql profile

[#177604067]

--- a/applications/credhub-api/src/main/resources/application-dev.yml
+++ b/applications/credhub-api/src/main/resources/application-dev.yml
@@ -51,7 +51,8 @@ server:
 
 spring:
   profiles:
-    include: dev-remote-uaa
+    group:
+      "dev": "dev-remote-uaa"
   jpa:
     hibernate:
       ddl-auto: validate
