--- a/build.gradle
+++ b/build.gradle
@@ -9,19 +9,19 @@ buildscript {
         bcpkixFipsVersion = '1.0.5'
         bcFipsVersion = '1.0.1'
         commonsCodecVersion = '1.15' // remove this after deleting (now deprecated) spring-security-oauth2
-        flywayVersion = '5.2.4' // pinning to v5 because upgrading to v6+ directly breaks the upgrade of (v4->v5->v6) unless we can work around [this breaking change](https://stackoverflow.com/questions/49063385/flyway-5-0-7-warning-about-using-schema-version-table).
+        flywayVersion = '7.7.1'
         guavaVersion = '30.1.1-jre'
         h2Version = '1.4.199'
         jsonPathVersion = '2.6.0'
-        kotlinVersion = '1.3.72'
-        ktlintVersion = '0.37.2'
+        kotlinVersion = '1.4.32'
+        ktlintVersion = '0.42.1'
         mariadbJdbcVersion = '2.3.0' // When using a MariaDB with a driver of version 2.4.0 or greater, FlyWay 5 does not know how to handle the driver reporting itself as "MariaDB" and will throw an exception causing CredHub to be unable to start. Do not upgrade until this issue is resolved. See #174776586.
         passayVersion = '1.6.1'
         postgresqlJdbcVersion = '42.2.14'
         spotBugsToolVersion = '3.1.9'
         spotBugsGradlePluginVersion = '1.6.9'
         springRestDocsVersion = '2.0.5.RELEASE'
-        springBootVersion = '2.2.7.RELEASE'
+        springBootVersion = '2.4.11' // Springboot 2.5.5 requires Gradle 6.8.x, 6.9.x, or 7.x
         springSecurityOauth2Version = '2.5.1.RELEASE'
         springSecurityOauth2AutoconfigureVersion = '2.3.1.RELEASE'
     }
