Revert "Revert me: upgrade to flyway 7 without correctly renaming table name"
This reverts commit c4212b619bddd3a605db2e2c92014fcc4a425108.

--- a/applications/credhub-api/src/main/resources/application-dev.yml
+++ b/applications/credhub-api/src/main/resources/application-dev.yml
@@ -51,8 +51,7 @@ server:
 
 spring:
   profiles:
-    group:
-      "dev": "dev-remote-uaa"
+    include: dev-remote-uaa
   jpa:
     hibernate:
       ddl-auto: validate
