--- a/applications/credhub-api/src/main/resources/application-dev-mysql.yml
+++ b/applications/credhub-api/src/main/resources/application-dev-mysql.yml
@@ -3,5 +3,7 @@ spring:
     username: root
     password:
     url: jdbc:mariadb://localhost:3306/credhub_dev
+  profiles:
+    include: dev
   flyway:
     locations: classpath:/db/migration/common,classpath:/db/migration/mysql
