Do not bump flyway for 2.5.x
Co-authored-by: Bruce Ricard <bricard@vmware.com>

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -13,6 +13,9 @@ updates:
       interval: "daily"
     open-pull-requests-limit: 100
     target-branch: "2.5.x"
+    ignore:
+    - dependency-name: "org.flywaydb:flyway-core"
+      update-types: ["version-update:semver-major"]
 
   - package-ecosystem: "gradle"
     directory: "/"
