Fix: local start server with remote dev UAA
- this is fixing a prior mistake when migrating spring config yml
to spring boot 2.4 format, where the `spring.profiles.include: dev-remote-uaa` syntax
is deprecated.
- see error in #180159080
- The correct format should be creating a "profile group" in
  application.yml in the format of `spring.profiles.group.PROFILE-NAME:
  OTHER-PROFILE-NAME-TO-INCLUDE`. This means when you run `PROFILE-NAME`
  then `OTHER-PROFILE-NAME-TO-INCLUDE` will also be triggerd, as a
  group. This is what the old `spring.profiles.include: dev-remote-uaa`
  syntax was tring to do.
- resource: https://spring.io/blog/2020/08/14/config-file-processing-in-spring-boot-2-4

[#180159080]

--- a/applications/credhub-api/src/main/resources/application.yml
+++ b/applications/credhub-api/src/main/resources/application.yml
@@ -1,6 +1,9 @@
 spring:
   main:
     allow-bean-definition-overriding: true
+  profiles:
+    group:
+      "dev": "dev-remote-uaa"
 
 management:
   endpoints:
