--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -14,4 +14,4 @@ jobs:
           java-package: jdk
           architecture: x86
       - name: Build and test with Gradle
-        run: ./gradlew clean build
+        run: ./gradlew clean build --exclude-task :applications:credhub-api:spotbugsMain
