--- a/build.gradle
+++ b/build.gradle
@@ -13,14 +13,14 @@ buildscript {
         guavaVersion = '31.1-jre'
         h2Version = '1.4.199'
         jsonPathVersion = '2.7.0'
-        kotlinVersion = '1.4.32'
+        kotlinVersion = '1.5.32'
         ktlintVersion = '0.42.1'
         mariadbJdbcVersion = '2.7.4' // When using a MariaDB with a driver of version 2.4.0 or greater, FlyWay 5 does not know how to handle the driver reporting itself as "MariaDB" and will throw an exception causing CredHub to be unable to start. Do not upgrade until this issue is resolved. See #174776586.
         passayVersion = '1.6.1'
         postgresqlJdbcVersion = '42.3.3'
         spotBugsToolVersion = '4.6.0'
         springRestDocsVersion = '2.0.6.RELEASE'
-        springBootVersion = '2.4.13' // Springboot 2.5.5 requires Gradle 6.8.x, 6.9.x, or 7.x
+        springBootVersion = '2.5.10'
         springSecurityOauth2Version = '2.5.1.RELEASE'
         springSecurityOauth2AutoconfigureVersion = '2.6.3'
         junitVersion = '4.13.2'
