--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -23,3 +23,6 @@ updates:
   - dependency-name: org.mariadb.jdbc:mariadb-java-client
     versions:
     - 2.7.1
+  - dependency-name: "org.mariadb.jdbc:mariadb-java-client" ## 2.x is stable and will be supported until about September 2025
+    update-types: ["version-update:semver-major"]           ## https://mariadb.com/kb/en/about-mariadb-connector-j/ (have fun)
+                                                            ## version 3.x isn't described as "stable" (like 2.7) as of March 2022
