--- a/components/permissions/build.gradle
+++ b/components/permissions/build.gradle
@@ -57,7 +57,7 @@ dependencies {
     // Other
     implementation("com.google.guava:guava:${guavaVersion}")
     implementation("org.apache.commons:commons-lang3:${apacheCommonsLang3Version}")
-    implementation("org.apache.commons:commons-io:${apacheCommonsIoVersion}")
+    implementation("commons-io:commons-io:${apacheCommonsIoVersion}")
     implementation("commons-codec:commons-codec:${commonsCodecVersion}")
 }
 
