--- a/components/credentials/build.gradle
+++ b/components/credentials/build.gradle
@@ -56,7 +56,7 @@ dependencies {
     implementation("org.flywaydb:flyway-core:${flywayVersion}")
     implementation("org.postgresql:postgresql:${postgresqlJdbcVersion}")
 
-    implementation("org.mariadb.jdbc:mariadb-java-client:${mariadbJdbcVersion}")
+    implementation("org.mariadb.jdbc:mariadb-java-client")
     implementation("com.h2database:h2:${h2Version}")
 
     // proto
