--- a/build.gradle
+++ b/build.gradle
@@ -65,7 +65,7 @@ dependencyUpdates.resolutionStrategy = {
 subprojects {
     plugins.withType(JavaPlugin) {
         dependencies {
-            testImplementation("org.mockito:mockito-inline:4.5.1")
+            testImplementation("org.mockito:mockito-inline")
         }
     }
 }
