--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -20,9 +20,11 @@ updates:
     - 7.7.3
     - 7.8.0
     - 7.8.1
-  - dependency-name: "org.mariadb.jdbc:mariadb-java-client" ## 2.x is stable and will be supported until about September 2025
+  - dependency-name: "com.h2database:h2"                    ## can only bump to the next major (v2) after flyway is bumped to v8, see context: https://github.com/cloudfoundry/credhub/pull/259#issuecomment-1093414459
+    update-types: [ "version-update:semver-major" ]
+  - dependency-name: "org.mariadb.jdbc:mariadb-java-client" ## 2.x is stable and will be supported until about September 2025; version 3.x isn't described as "stable" (like 2.7) as of March 2022.
     update-types: ["version-update:semver-major"]           ## https://mariadb.com/kb/en/about-mariadb-connector-j/ (have fun)
-                                                            ## version 3.x isn't described as "stable" (like 2.7) as of March 2022
+
 - package-ecosystem: "github-actions"
   directory: "/"
   schedule:
